add_subdirectory("${PROJECT_SOURCE_DIR}/extern/googletest" "extern/googletest")
set_target_properties(gtest PROPERTIES FOLDER extern)
set_target_properties(gtest_main PROPERTIES FOLDER extern)
set_target_properties(gmock PROPERTIES FOLDER extern)
set_target_properties(gmock_main PROPERTIES FOLDER extern)

macro(add_test TEST_NAME)
  add_executable(${TEST_NAME} ${ARGN})
  target_link_libraries(${TEST_NAME} gtest gmock gtest_main lua-compiler)
  gtest_discover_tests(${TEST_NAME} WORKING_DIRECTORY ${PROJECT_DIR})
  set_target_properties(${TEST_NAME} PROPERTIES FOLDER test)
endmacro()

add_test(lexer lexer.test.cpp)
add_test(parser parser.test.cpp)
add_test(watGenerator watGenerator.test.cpp)
